[gd_scene load_steps=4 format=3 uid="uid://c6026s4w6jdb0"]

[ext_resource type="Script" uid="uid://bmyiy717gwi8p" path="res://ui/menu_layer.gd" id="1_84g5n"]
[ext_resource type="Texture2D" uid="uid://cmdjrihpjwxfy" path="res://assets/textures/message.png" id="1_u0fh4"]
[ext_resource type="FontFile" uid="uid://ddrnuwj7tjhio" path="res://assets/fonts/flappyfont.TTF" id="3_k0fio"]

[node name="MenuLayer" type="CanvasLayer"]
script = ExtResource("1_84g5n")

[node name="StartMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartMessage" type="TextureRect" parent="StartMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -352.0
offset_right = 138.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_u0fh4")

[node name="GameOverMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -197.0
offset_right = 125.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="ScoreLabel" type="Label" parent="GameOverMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.627451)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_k0fio")
theme_override_font_sizes/font_size = 32
text = "SCORE: 1234"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScoreLabel" type="Label" parent="GameOverMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.627451)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_k0fio")
theme_override_font_sizes/font_size = 32
text = "BSET: 1234"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_k0fio")
theme_override_font_sizes/font_size = 32
text = "RESTART"

[connection signal="pressed" from="GameOverMenu/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
